reformated a bunch of configs, automatic tmux, and more

--- a/.config/fuzzel/fuzzel.ini
+++ b/.config/fuzzel/fuzzel.ini
@@ -1,4 +1,5 @@
-# output=<not set>
+# General Configuration
+output=<not set>
 font=monospace:size=16
 dpi-aware=auto
 prompt=""
@@ -7,12 +8,13 @@ icons-enabled=yes
 fields=filename,name,generic
 password-character=*
 filter-desktop=no
-fuzzy=yes
+match-mode=fzf
 show-actions=no
 # terminal=$TERMINAL -e  # Note: you cannot actually use environment variables here
 # launch-prefix=<not set>
 # list-executables-in-path=no
 
+# Layout Settings
 anchor=center
 lines=10
 width=30
@@ -21,12 +23,12 @@ horizontal-pad=18
 vertical-pad=8
 inner-pad=0
 image-size-ratio=0.5
-
 line-height=30
 letter-spacing=0
 layer=top
 exit-on-keyboard-focus-loss=yes
 
+# Color Settings
 [colors]
 background=#282828DF
 text=#ebdbb2ff
@@ -37,10 +39,12 @@ selection-text=#ebdbb2ff
 selection-match=#cb4b16ff
 border=#427b58ff
 
+# Border Settings
 [border]
 width=0
 radius=8
 
+# dmenu Settings
 [dmenu]
 # mode=text  # text|index
 # exit-immediately-if-empty=no
