--- a/.config/fnott/fnott.ini
+++ b/.config/fnott/fnott.ini
@@ -1,4 +1,5 @@
-# output=<undefined>#
+# General Configuration
+output=<undefined>
 min-width=150
 max-width=400
 max-height=300
@@ -7,45 +8,41 @@ anchor=bottom-right
 edge-margin-vertical=8
 edge-margin-horizontal=8
 notification-margin=8
-icon-theme=breeze
-max-icon-size=48
-selection-helper=fuzzel
-# selection-helper-uses-null-separator=no
-# play-sound=aplay ${filename}
-
-layer=top
-background=282828BF
-
-border-color=427b58ff
-border-size=0
-
-padding-vertical=10
-padding-horizontal=10
-
-# dpi-aware=no
-
-title-font=sans-serif:size=16:weight=bold
-title-color=427b58ff
-title-format=<i>%a%A</i>
-
-summary-font=sans-serif:size=14:weight=regular
-summary-color=ebdbb2ff
-summary-format=<b>%s</b>\n
-
-body-font=sans-serif:size=12:weight=regular
-body-color=ebdbb2ff
-body-format=%b
-
-progress-bar-height=20
-progress-bar-color=427b58ff
-
-# sound-file=
-# icon=
-
 max-timeout=10
 default-timeout=10
 idle-timeout=0
 
+# Appearance Settings
+layer=top
+background=282828BF
+border-color=427b58ff
+border-size=0
+padding-vertical=10
+padding-horizontal=10
+icon-theme=breeze
+max-icon-size=48
+
+# Font Settings
+title-font=sans-serif:size=16:weight=bold
+title-color=427b58ff
+title-format=<i>%a%A</i>
+summary-font=sans-serif:size=14:weight=regular
+summary-color=ebdbb2ff
+summary-format=<b>%s</b>\n
+body-font=sans-serif:size=12:weight=regular
+body-color=ebdbb2ff
+body-format=%b
+
+# Progress Bar Settings
+progress-bar-height=20
+progress-bar-color=427b58ff
+
+# Notification Helpers
+selection-helper=fuzzel
+# selection-helper-uses-null-separator=no
+# play-sound=aplay ${filename}
+
+# State-Specific Configurations
 [low]
 background=282828BF
 title-color=427b58ff
@@ -56,4 +53,3 @@ body-color=427b58ff
 
 [critical]
 title-color=cb4b16ff
-
