--- a/.config/wayfire.ini
+++ b/.config/wayfire.ini
@@ -1,12 +1,9 @@
-# Input configuration ──────────────────────────────────────────────────────────
-
 [input]
 # Keyboard
 xkb_layout = fr,us
 xkb_variant = azerty
 xkb_options = grp:rctrl_rshift_toggle
 kb_numlock_default_state = true
-#xkb_variant = dvorak,bepo
 
 # Mouse
 mouse_accel_profile = flat
@@ -16,20 +13,14 @@ natural_scroll = false
 cursor_theme = Breeze_Snow
 cursor_size = 24
 
-# Output configuration ─────────────────────────────────────────────────────────
-
 [output:HDMI-A-1]
 mode = 1920x1080@60000
 position = 0,0
 transform = normal
-scale = 1.000000
-
-# Core options ─────────────────────────────────────────────────────────────────
+scale = 1.0
 
 [core]
-
 # List of plugins to be enabled.
-# See the Configuration document for a complete list.
 plugins = \
   alpha \
   animate \
@@ -53,61 +44,45 @@ plugins = \
   wm-actions \
   wrot
 
-# invert
-# zoom
-# cube
-# fisheye
-# blur
-# idle
-# wobbly
-
 # Close focused window.
 close_top_view = <super> <shift> KEY_A | <alt> KEY_F4
 
-# Workspaces arranged into a grid: 3 × 3.
+# Workspaces arranged into a grid: 2 × 2.
 vwidth = 2
 vheight = 2
 
 # Prefer client-side decoration or server-side decoration
 preferred_decoration_mode = server
 
-# Mouse bindings ───────────────────────────────────────────────────────────────
-
-# Drag windows by holding down Super and left mouse button.
 [move]
+# Drag windows with Super + left mouse button.
 activate = <super> BTN_LEFT
 
-# Resize them with right mouse button + Super.
 [resize]
+# Resize windows with Super + right mouse button.
 activate = <super> BTN_RIGHT
 
-# Change opacity by scrolling with Super + Alt.
 [alpha]
+# Change opacity with Super + Alt scroll.
 modifier = <super> <alt>
 
-# Rotate windows with the mouse.
 [wrot]
+# Rotate windows with Super + Ctrl + right mouse button.
 activate = <super> <ctrl> BTN_RIGHT
 
-# Fisheye effect.
 [fisheye]
+# Toggle fisheye effect with Super + Ctrl + F.
 toggle = <super> <ctrl> KEY_F
-
-# Startup commands ─────────────────────────────────────────────────────────────
 
 [autostart]
 autostart_wf_shell = false
 script-autostart = exec sh -c "$HOME/.config/autostart/autostart.sh" &
 
-# Applications ─────────────────────────────────────────────────────────────────
-
 [command]
-
-# Start a terminal
+# Application shortcuts
 binding_terminal = <super> KEY_ENTER
 command_terminal = foot
 
-# Start your launcher
 binding_launcher = <super> KEY_D
 command_launcher = fuzzel
 
@@ -117,7 +92,7 @@ command_run = fuzzel-run
 binding_menu = <super> <shift> KEY_ENTER
 command_menu = fuzz-launcher
 
-# Screenshots
+# Screenshot bindings
 binding_screenshot = KEY_SYSRQ
 command_screenshot = grim-copy
 binding_screenshot_interactive = <super> <shift> KEY_S
@@ -126,85 +101,75 @@ command_screenshot_interactive = grim-slurp
 # Volume controls
 repeatable_binding_volume_up = KEY_VOLUMEUP
 command_volume_up = wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
+
 repeatable_binding_volume_down = KEY_VOLUMEDOWN
 command_volume_down = wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+
 binding_mute = KEY_MUTE
 command_mute = wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 
 # Screen brightness
 repeatable_binding_light_up = KEY_BRIGHTNESSUP
 command_light_up = light -A 5
+
 repeatable_binding_light_down = KEY_BRIGHTNESSDOWN
 command_light_down = light -U 5
 
-# Emoji selector
-#binding_bemoji = <super> KEY_SEMICOLON
+# Miscellaneous
 binding_bemoji = <super> KEY_M
 command_bemoji = bemoji
 
-# Clipboard manager
 binding_clipmanager = <super> KEY_COMMA
 command_clipmanager = clip-manager
 
-# Calculator
-binding_calculator= KEY_CALC
-command_calculator= fuzz-calc
-
-
-# Windows ──────────────────────────────────────────────────────────────────────
+binding_calculator = KEY_CALC
+command_calculator = fuzz-calc
 
 [wm-actions]
+# Window management actions
 toggle_fullscreen = <super> KEY_F
 toggle_always_on_top = <super> KEY_X
 toggle_sticky = <super> <shift> KEY_X
 
 [animate]
-# Possible values are: none, fade, zoom, fire
+# Window animations
 open_animation = zoom
 close_animation = zoom
 duration = 250
 
-# Position the windows in certain regions of the output.
 [grid]
-#
-# ⇱ ↑ ⇲   │ 7 8 9
-# ← f →   │ 4 5 6
-# ⇱ ↓ ⇲ d │ 1 2 3 0
-# ‾   ‾
-slot_bl = <super> KEY_KP1
-slot_b = <super> KEY_KP2
-slot_br = <super> KEY_KP3
+# Position windows in certain regions of the output.
+slot_bl = <super> KEY_KP1  # Bottom left
+slot_b = <super> KEY_KP2   # Bottom center
+slot_br = <super> KEY_KP3  # Bottom right
 slot_l = <super> KEY_LEFT | <super> KEY_KP4
 slot_c = <super> KEY_UP | <super> KEY_KP5
 slot_r = <super> KEY_RIGHT | <super> KEY_KP6
-slot_tl = <super> KEY_KP7
-slot_t = <super> KEY_KP8
-slot_tr = <super> KEY_KP9
-# Restore default.
+slot_tl = <super> KEY_KP7  # Top left
+slot_t = <super> KEY_KP8   # Top center
+slot_tr = <super> KEY_KP9  # Top right
 restore = <super> KEY_DOWN | <super> KEY_KP0
 
-# Change active window with an animation.
 [switcher]
+# Window switching
 next_view = <alt> KEY_TAB
 prev_view = <alt> <shift> KEY_TAB
 
-# Simple active window switcher.
 [fast-switcher]
+# Simple active window switcher
 activate = <alt> KEY_ESC
 
 [decoration]
+# Window decoration settings
 active_color = \#689D6AFF
 border_size = 2
-button_order = 
+button_order =
 font = monospace
-ignore_views = none
 inactive_color = \#282828FF
 title_height = 0
 
-# Workspaces ───────────────────────────────────────────────────────────────────
-
-# Switch to workspace.
 [vswitch]
+# Workspace switching
 binding_left = <alt> <super> KEY_LEFT
 binding_down = <alt> <super> KEY_DOWN
 binding_up = <alt> <super> KEY_UP
@@ -215,25 +180,13 @@ with_win_down = <ctrl> <super> <alt> KEY_DOWN
 with_win_up = <ctrl> <super> <alt> KEY_UP
 with_win_right = <ctrl> <super> <alt> KEY_RIGHT
 
-# Show the current workspace row as a cube.
 [cube]
+# Cube workspace overview
 activate = <ctrl> <alt> BTN_LEFT
-# Switch to the next or previous workspace.
-#rotate_left = <super> <ctrl> KEY_H
-#rotate_right = <super> <ctrl> KEY_L
 
-# Show an overview of all workspaces.
 [expo]
+# Overview of all workspaces
 toggle = <super>
-# Select a workspace.
-# Workspaces are arranged into a grid of 3 × 3.
-# The numbering is left to right, line by line.
-#
-# ⇱ k ⇲
-# h ⏎ l
-# ⇱ j ⇲
-# ‾   ‾
-# See core.vwidth and core.vheight for configuring the grid.
 select_workspace_1 = KEY_1
 select_workspace_2 = KEY_2
 select_workspace_3 = KEY_3
@@ -244,34 +197,22 @@ select_workspace_7 = KEY_7
 select_workspace_8 = KEY_8
 select_workspace_9 = KEY_9
 
-# Outputs ──────────────────────────────────────────────────────────────────────
-
-# Change focused output.
 [oswitch]
-# Switch to the next output.
+# Output management
 next_output = <super> KEY_O
-# Same with the window.
 next_output_with_win = <super> <shift> KEY_O
 
-# Invert the colors of the whole output.
 [invert]
+# Color inversion
 toggle = <super> KEY_I
 
-# Send toggle menu event.
 [wayfire-shell]
+# Wayfire shell settings
 toggle_menu = <super>
 
-# Rules ────────────────────────────────────────────────────────────────────────
-
-# Example configuration:
-#
 [window-rules]
-# maximize_alacritty = on created if app_id is "Alacritty" then maximize
-
-# $ WAYLAND_DEBUG=1 alacritty 2>&1 | kak
-# See Window rules for a complete reference.
-# https://github.com/WayfireWM/wayfire/wiki/Configuration#window-rules
+# Window rules configuration
 
 [workarounds]
-#force_preferred_decoration_mode = true
-
+# Workarounds for window management
+# force_preferred_decoration_mode = true
