fixed typo in fontconfig added cascadia font

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -58,9 +58,9 @@
   <alias>
     <family>monospace</family>
     <prefer>
-      <family>Cascadia Code</family>
+      <family>Cascadia Mono</family>
       <family>Hack</family>
-      <family>Noto Mono</family>
+      <family>Noto Sans Mono</family>
       <family>Ubuntu Mono</family>
     </prefer>
   </alias>
