big color update, now using base16 theming system with flavours, new bar, will theme the tiling bar later

--- a/.config/fnott/fnott.ini
+++ b/.config/fnott/fnott.ini
@@ -14,8 +14,6 @@ idle-timeout=0
 
 # Appearance Settings
 layer=top
-background=282828BF
-border-color=427b58ff
 border-size=0
 padding-vertical=10
 padding-horizontal=10
@@ -24,7 +22,6 @@ max-icon-size=48
 
 # Font Settings
 title-font=sans-serif:size=16:weight=bold
-title-color=427b58ff
 title-format=<i>%a%A</i>
 summary-font=sans-serif:size=14:weight=regular
 summary-color=ebdbb2ff
@@ -33,23 +30,28 @@ body-font=sans-serif:size=12:weight=regular
 body-color=ebdbb2ff
 body-format=%b
 
-# Progress Bar Settings
 progress-bar-height=20
-progress-bar-color=427b58ff
 
 # Notification Helpers
 selection-helper=fuzzel
 # selection-helper-uses-null-separator=no
 # play-sound=aplay ${filename}
 
-# State-Specific Configurations
+# Colors settings
+# Start flavours
+background=282828bf
+border-color=b8bb26ff
+title-color=b8bb26ff
+progress-bar-color=b8bb26ff
+
 [low]
-background=282828BF
-title-color=427b58ff
-summary-color=427b58ff
-body-color=427b58ff
+background=282828bf
+title-color=83a598ff
+summary-color=d5c4a1ff
+body-color=d5c4a1ff
 
 # [normal]
 
 [critical]
-title-color=cb4b16ff
+title-color=fabd2fff
+# End flavours
