--- a/.config/fuzzel/fuzzel.ini
+++ b/.config/fuzzel/fuzzel.ini
@@ -1,4 +1,6 @@
 # General Configuration
+include=~/.config/fuzzel/colors.ini
+
 # output=<not set>
 font=monospace:size=16
 dpi-aware=auto
@@ -27,17 +29,6 @@ line-height=30
 letter-spacing=0
 layer=top
 exit-on-keyboard-focus-loss=yes
-
-# Color Settings
-[colors]
-background=#282828DF
-text=#ebdbb2ff
-input=#ebdbb2ff
-match=#427b58ff
-selection=#427b58ff
-selection-text=#ebdbb2ff
-selection-match=#cb4b16ff
-border=#427b58ff
 
 # Border Settings
 [border]
