--- a/.config/imv/config
+++ b/.config/imv/config
@@ -1,9 +1,11 @@
 [options]
+# Start flavours
 background = 282828
+overlay_text_color = ebdbb2
+overlay_background_color = 282828
+# End flavours
 overlay = false
 overlay_font = monospace:14
-overlay_text_color = 689D6A
-overlay_background_color = 282828
 overlay_background_alpha = AC
 overlay_position_bottom = true
 scaling_mode = full
