ff-bulk & ff-audio are case insensitive now

--- a/.config/xsettingsd/xsettingsd.conf
+++ b/.config/xsettingsd/xsettingsd.conf
@@ -1,9 +1,9 @@
 Gdk/WindowScalingFactor 1
-Net/ThemeName "Breeze"
-Net/IconThemeName "breeze"
+Net/ThemeName "FlatColor"
+Net/IconThemeName "breeze-dark"
 Gtk/ButtonImages 1
 Gtk/CursorThemeSize 24
-Gtk/CursorThemeName "breeze_cursors"
+Gtk/CursorThemeName "Breeze_Snow"
 Net/EnableEventSounds 1
 EnableInputFeedbackSounds 0
 Xft/Antialias 1
