--- a/.local/share/applications/img.desktop
+++ b/.local/share/applications/img.desktop
@@ -3,7 +3,7 @@ Name=Image viewer
 GenericName=Image viewer
 GenericName[en_US]=Image viewer
 Comment=Fast Image Viewer
-Exec=swayimg %f
+Exec=sh -c 'unset SWAYSOCK; exec swayimg %f'
 Terminal=false
 Type=Application
 Categories=Graphics;2DGraphics;Viewer;
