added mpv loop playlist shortcut

--- a/.config/mpv/input.conf
+++ b/.config/mpv/input.conf
@@ -1,2 +1,3 @@
 Ctrl+r write-watch-later-config ; loadfile ${path}
 Shift+s playlist-shuffle ; show-text "${playlist}" 4000
+Ctrl+l cycle-values loop-playlist yes no
