--- a/.config/fuzzel/fuzzel.ini
+++ b/.config/fuzzel/fuzzel.ini
@@ -5,7 +5,7 @@ include=~/.config/fuzzel/colors.ini
 font=monospace:size=16
 dpi-aware=auto
 prompt=""
-icon-theme=breeze
+icon-theme=breeze-dark
 icons-enabled=yes
 fields=filename,name,generic
 password-character=*
