--- a/.config/xdg-desktop-portal/portals.conf
+++ b/.config/xdg-desktop-portal/portals.conf
@@ -1,5 +1,5 @@
 [preferred]
-default=gnome
+default=gtk
 org.freedesktop.impl.portal.FileChooser=gtk;
 org.freedesktop.impl.portal.ScreenCast=gnome;
 org.freedesktop.impl.portal.Screenshot=gnome;
