--- a/.config/xdg-desktop-portal/portals.conf
+++ b/.config/xdg-desktop-portal/portals.conf
@@ -1,6 +1,6 @@
 [preferred]
 default=gtk
 org.freedesktop.impl.portal.FileChooser=gtk;
-org.freedesktop.impl.portal.ScreenCast=gnome;
-org.freedesktop.impl.portal.Screenshot=gnome;
-org.freedesktop.impl.portal.RemoteDesktop=gnome;
+org.freedesktop.impl.portal.ScreenCast=wlr;
+org.freedesktop.impl.portal.Screenshot=wlr;
+org.freedesktop.impl.portal.RemoteDesktop=wlr;
