fixed minor issue in net-menu

--- a/.config/mpv/input.conf
+++ b/.config/mpv/input.conf
@@ -1,3 +1,4 @@
-Ctrl+r write-watch-later-config ; loadfile ${path}
-Shift+s playlist-shuffle ; show-text "${playlist}" 4000
-Ctrl+l cycle-values loop-playlist yes no
+Ctrl+Shift+R write-watch-later-config ; loadfile ${path}
+Ctrl+Shift+P playlist-shuffle ; show-text "${playlist}" 4000
+Ctrl+L cycle-values loop-playlist yes no
+Alt+P script-message save-playlist
