--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -4,6 +4,7 @@ hwdec-codecs=all
 deband=no
 interpolation=no
 vd-lavc-dr=yes
+drag-and-drop=append
 input-ipc-server=/tmp/mpvsocket
 screenshot-directory=pictures
 
