updated cursor theme

--- a/.config/xsettingsd/xsettingsd.conf
+++ b/.config/xsettingsd/xsettingsd.conf
@@ -3,7 +3,7 @@ Net/ThemeName "FlatColor"
 Net/IconThemeName "breeze-dark"
 Gtk/ButtonImages 1
 Gtk/CursorThemeSize 24
-Gtk/CursorThemeName "Breeze_Snow"
+Gtk/CursorThemeName "Kaela-Kovalskia-v2"
 Net/EnableEventSounds 1
 EnableInputFeedbackSounds 0
 Xft/Antialias 1
