--- a/.config/MangoHud/MangoHud.conf
+++ b/.config/MangoHud/MangoHud.conf
@@ -45,7 +45,7 @@ fps_limit_method=early
 
 show_fps_limit
 
-fps_limit=119,59,29
+fps_limit=119,59,48,30
 fsr
 fps_color_change
 fps_color=B22222,FDFD09,39F900
@@ -59,7 +59,7 @@ gl_vsync=-1
 time#
 
 
-output_folder=/home/lyes/.cache
+output_folder=$HOME/.cache
 log_duration=30
 autostart_log=0
 log_interval=100
